--- a/templates/form.html
+++ b/templates/form.html
@@ -1,7 +1,7 @@
  <!doctype html>
  <html lang="fr">
      <head>
-         <link rel="stylesheet" href= "styleform.css">
+         <link rel="stylesheet" href={{ url_for("static", filename="styleform.css")}}>
          <meta charset="utf-8">
          <title>Le formulaire pour pendu</title>
      </head>
