Backend partially finished
Main components are up. Next step is to add a table view to see all the words that have been added. In good way: one last step for the backend.

--- a/templates/form.html
+++ b/templates/form.html
@@ -6,7 +6,7 @@
          <title>Le formulaire pour pendu</title>
      </head>
      <body>
-         <form action="http://localhost:5000/resultat" method="get">
+         <form action="/resultat" method="post">
                  
                 <div>
                      <label id="labelmot">Mot à enregistrer dans la base :</label> <br>
