--- a/templates/resultat.html
+++ b/templates/resultat.html
@@ -1,5 +1,5 @@
 <!doctype html>
- <html lang="fr">
+<html lang="fr">
      <head>
          <link rel="stylesheet" href={{ url_for("static", filename="styleform.css")}}>
          <meta charset="utf-8">
@@ -12,8 +12,7 @@
         <p>Vous estimez à une difficulté : {{difficulte}}</p>
         <p>Vous suggerez les lettres de rang {{lettre1}} et {{lettre2}} pour aider.</p>
         
-        <a href="localhost:5000"> Retour au formulaire de saisie pour un autre
-        mot</a>
+        <a href="/form"> Retour au formulaire de saisie pour un autre mot</a>
         
      </body>
- </html>
+</html>
