Finished all the backend.
Add a page to see the database, a page dedicated to errors + better internal error handling.

--- a/templates/resultat.html
+++ b/templates/resultat.html
@@ -8,11 +8,11 @@
      <body>
         <h1>Récapitulatif de votre saisie</h1>
         
-        <p>Bonjour, vous venez de saisir le mot: {{mot}}</p>
-        <p>Vous estimez à une difficulté : {{difficulte}}</p>
-        <p>Vous suggerez les lettres de rang {{lettre1}} et {{lettre2}} pour aider.</p>
-        
-        <a href="/form"> Retour au formulaire de saisie pour un autre mot</a>
+        <p>Le mot saisi est le suivant: {{mot}}</p>
+        <p>La difficulté que vous avez estimée du mot est de {{difficulte}}</p>
+        <p>Pour l'aide, vous avez décidé d'utiliser la lettre {{lettre1}} et {{lettre2}}.</p>
+        <a href="/form">Retour au formulaire de saisie pour un autre mot</a>
+        <a href="/table">Ouvrir le registre des mots du fichier</a>
         
      </body>
 </html>
